# SystemC_ramblings

./: .gitignore  README.md
resources/: README  README.md  build.sh  links.txt
src/: CMakeLists.txt  README.md
src/01_SystemCTest/: CMakeLists.txt  Makefile  README  basic.cpp
src/02_adder/: CMakeLists.txt  CPackConfig.cmake  CTestConfig.cmake  Makefile  README  README.md  build.cmake  full_adder.cpp  full_adder_main.cpp  half_adder.h  jenkinsCoverage.sh  monitor.cpp  monitor.h
src/02_adder/cmake/: fullAdderConfig.cmake.in
src/02_adder/docs/: Doxyfile.in
src/02_adder/include/: full_adder.h  half_adder.h
src/02_adder/src/: full_adder.cpp  half_adder.cpp
src/02_adder/tests/: CMakeLists.txt
src/02_adder/tests/AdderTest/: CMakeLists.txt
src/02_adder/tests/AdderTest/include/: driver.h  monitor.h
src/02_adder/tests/AdderTest/src/: driver.cpp  full_adder_main.cpp  monitor.cpp
src/03_fir/: CMakeLists.txt  Makefile  README  fir.cpp  fir.h  firsytemmain.cpp  tb.cpp  tb.h
src/04_timer/: CMakeLists.txt  Makefile  README  README.md  defines.h  main_timer_check.cpp  output.txt  timer.cpp  timer.h  timer_tb.cpp  timer_tb.h
src/05_memory/: CMakeLists.txt  Makefile  README  README.md  main_mem_check.cpp  memory.cpp  memory.h
src/05_memory/data/: CMakeLists.txt  Makefile  gen_ram.c  ram_init
src/06_tlm_initial_example/: CMakeLists.txt  README.md  design.cpp  initiator.cpp  initiator.h  report.h  target.h
src/07_tlm_router/: CMakeLists.txt  design.cpp  router.cpp  router.h  target.cpp  target.h  top.h
src/08_tlm_router_example/: CMakeLists.txt  target.h
src/09_Doulos/: CMakeLists.txt
src/09_Doulos/tlm_example_01/: CMakeLists.txt  README.md  initiator.h  target.h  testbench.cpp
src/09_Doulos/tlm_example_02/: CMakeLists.txt  README.md  initiator.h  target.h  testbench.cpp  top.h
src/09_Doulos/tlm_example_03/: CMakeLists.txt  README.md  initiator.h  router.h  testbench.cpp  top.h
src/09_Doulos/tlm_example_04/: CMakeLists.txt  README.md  initiator.h  target.h  testbench.cpp  top.h  utilities.h
src/09_Doulos/tlm_example_05/: CMakeLists.txt  README.md  bus.h  initiator1.h  initiator2.h  target.h  testbench.cpp  top.h  utilities.h
src/09_Doulos/tlm_example_06/: CMakeLists.txt  README.md  bus.h  initiator.h  target.h  testbench.cpp  top.h  utilities.h
src/09_Doulos/tlm_example_07/: CMakeLists.txt  README.md  design.cpp  initiator.cpp  report.h  target.cpp  testbench.cpp  top.h
