cmake_minimum_required(VERSION 3.5)

project(09_Doulos)

add_subdirectory(tlm_example_01)
add_subdirectory(tlm_example_02)
add_subdirectory(tlm_example_03)
add_subdirectory(tlm_example_04)
add_subdirectory(tlm_example_05)
add_subdirectory(tlm_example_06)
add_subdirectory(tlm_example_07)

include(CTest)
